Fixed scrollbar gradient issue

--- a/src/pages/SearchPage.module.css
+++ b/src/pages/SearchPage.module.css
@@ -409,6 +409,7 @@
     min-height: 0;
     overflow-y: auto;
     scrollbar-gutter: stable;
+    padding-right: 2px;
 }
 
 .paginationBar {
